@@ -1,5 +1,9 @@
 2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* chopstx.c (chx_init): Initialize sleep lock.
+	(chopstx_conf_idle): New.
+	* chopstx-cortex-m.c (idle): Support sleep.
+
 	* mcu/usb-stm32f103.c (usb_lld_event_handler): Fix suspend/resume.
 
 2017-11-14  NIIBE Yutaka  <gniibe@fsij.org>
